--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
                     />
                     <p>JavaScript</p>
                   </div>
-                  <div class="col-4 tech-icon">
+                 <!-- <div class="col-4 tech-icon">
                     <img
                       src="./assets/icons/react.svg"
                       alt="react"
                       width="40"
                     />
                     <p>React</p>
-                  </div>
+                  </div>-->
                   <div class="col-4 tech-icon">
                     <img
                       src="./assets/icons/nodejs.svg"
@@ -202,14 +202,14 @@
                     />
                     <p>Node.js</p>
                   </div>
-                  <div class="col-4 tech-icon">
+                 <!-- <div class="col-4 tech-icon">
                     <img
                       src="./assets/icons/mongodb.svg"
                       alt="mongodb"
                       width="40"
                     />
                     <p>MongoDB</p>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
@@ -381,8 +381,8 @@
                 <h5>🖥️ Frontend</h5>
                 <ul class="list-unstyled">
                   <li>🔹 HTML, CSS, JavaScript</li>
-                  <li>🔹 Bootstrap, Tailwind CSS</li>
-                  <li>🔹 React.js</li>
+                  <li>🔹 Bootstrap, <!--Tailwind CSS--></li>
+                 <!--<li>🔹 React.js</li>-->
                 </ul>
               </div>
 
@@ -391,9 +391,9 @@
                 <h5>⚙️ Backend</h5>
                 <ul class="list-unstyled">
                   <li>🔹 Node.js, Express.js</li>
-                  <li>🔹 Python (Django, Flask)</li>
+                 <!-- <li>🔹 Python (Django, Flask)</li>
                   <li>🔹 PHP (Laravel)</li>
-                  <li>🔹 MySQL, PostgreSQL, MongoDB</li>
+                  <li>🔹 MySQL, PostgreSQL, MongoDB</li>-->
                 </ul>
               </div>
 
@@ -404,7 +404,7 @@
                   <li>🔹 Git, GitHub</li>
                   <li>🔹 VS Code, JetBrains IDEs</li>
                   <li>🔹 Postman</li>
-                  <li>🔹 Docker</li>
+                  <!--<li>🔹 Docker</li>-->
                 </ul>
               </div>
 
@@ -413,7 +413,7 @@
                 <h5>🎨 Design Tools</h5>
                 <ul class="list-unstyled">
                   <li>🔹 Figma</li>
-                  <li>🔹 Adobe Photoshop</li>
+                  <!--<li>🔹 Adobe Photoshop</li>-->
                   <li>🔹 Canva</li>
                 </ul>
               </div>
